[package]
name = "io-uring-futures"
version = "0.1.0"
authors = ["Jamey Sharp <jamey@minilop.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
io-uring = "0.3.4"
intrusive-collections = "0.9.0"
